End of Section 10

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -78,8 +78,7 @@
 
             </tab>
             <tab heading="Edit photos">
-                Photo edit will be here
-
+                <app-photo-editor [member]="member" (memberChange)="onMemberChange($event)"></app-photo-editor>
             </tab>
         </tabset>
     </div>
