--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,19 +1,45 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
-    <div class="form-group">
-        <input type="text" class="form-control" name="username" 
-            [(ngModel)]="model.username" placeholder="Username"  >
+
+    <div class="mb-3">
+        <label style="margin-right: 10px;">I am a:</label>
+        <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="male" formControlName="gender">Male
+        </label>
+        <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="female" formControlName="gender">Female
+        </label>
     </div>
 
-   
+    <app-text-input [formControl]="$any(registerForm.controls['username'])" [lable]="'Username'">
+    </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" [lable]="'Known As'">
+    </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['dateOfBirth'])" [lable]="'Date of birth'" [type]="'date'">
+    </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['city'])" [lable]="'City'">
+    </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['country'])" [lable]="'Country'">
+    </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['password'])" [lable]="'Password'" [type]="'password'">
+    </app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" [lable]="'Confirm Password'"
+        [type]="'Password'">
+    </app-text-input>
 
-    <div class="form-group">
-        <input type="password" class="form-control" name="password" 
-            [(ngModel)]="model.password" placeholder="Password"  >
-    </div>
+    @if (validationErrors) {
+        <div class="alert alert-danger text-start">
+            <ul>
+                @for (error of validationErrors; track $index) {
+                    <li>{{error}}</li>
+                }
+            </ul>
+        </div>
+    }
     <div class="form-group text-center">
-        <button class="btn btn-success mr-2" type="submit">Register</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit">Register</button>
         <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
+
