--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -27,11 +27,11 @@
                 </div>
                 <div>
                     <strong>Last Active: </strong>
-                    <p>{{member.lasActive}}</p>
+                    <p>{{member.lasActive | timeago}}</p>
                 </div>
                 <div>
                     <strong>Member Since: </strong>
-                    <p>{{member.created}}</p>
+                    <p>{{member.created | date : 'Add mmm yyyy'}}</p>
                 </div>
             </div>
             <div class="card-footer">
