--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,1 +1,43 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+    <h2>{{getTitle()}}</h2>
+</div>
+
+<div class="container mt-3">
+    <div class="d-flex">
+        <div class="btn-group">
+            <button class="btn btn-primary" btnRadio="liked" [(ngModel)]="predicate" (click)="loadLiked()">
+                Members I like
+            </button>
+            <button class="btn btn-primary" btnRadio="likedBy" [(ngModel)]="predicate" (click)="loadLiked()">
+                Members who like me
+            </button>
+            <button class="btn btn-primary" btnRadio="Mutual" [(ngModel)]="predicate" (click)="loadLiked()">
+                Mutual
+            </button>
+        </div>
+       
+    </div>
+    <div class="row mt-3">
+        @for (member of likeService.paginatedResult()?.items; track member.id) {
+            <div class="col-2">
+                <app-member-card [member]="member"></app-member-card>
+            </div>
+        }
+    </div>
+</div>
+<div *ngIf="likeService.paginatedResult()?.pagination">
+    <div class="d-flex justify-content-center">
+      <pagination 
+        [boundaryLinks]="true"
+        [totalItems]="likeService.paginatedResult()?.pagination!.totalItems"
+        [itemsPerPage]="likeService.paginatedResult()?.pagination!.itemsPerPage"
+        (pageChanged)="pageChanged($event)"
+        [(ngModel)] ="likeService.paginatedResult()?.pagination!.currentPage"
+        [maxSize]="10"
+        previousText="&lsaquo;"
+        nextText="&rsaquo;"
+        firstText="&laquo;"
+        lastText="&raquo;">
+      </pagination>
+    </div>
+  </div>
