--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -7,6 +7,12 @@
                 alt="{{member.knownAs}}"
                 class="card-img img-thumbnail">
                 <div class="card-body">
+                    @if (presenceService.onlineUsers().includes(member.username)) {
+                        <div class="mb-2">
+                            <i class="fa fa-user-circle text-success"></i> Online Now
+                        </div>
+                    }
+                    
                     <div>
                         <strong>Location: </strong>
                         <p>{{member.city}},{{member.country}}</p>
@@ -55,8 +61,7 @@
                 <tab heading="Messages" (selectTab)="onTabActivated($event)">
                     <app-member-messages 
                         [username]="member.username"
-                        [messages]="messages"
-                        (updateMessages)="onUpdateMessages($event)"
+                    
                         ></app-member-messages>
                  </tab>
             </tabset> 
