--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -4,7 +4,10 @@
         <p>No message yet</p>
       }
       @else {
-        <ul class="chat">
+        <ul class="chat",
+            #scrollMe,
+            style="overflow: scroll; max-height: 500px;scroll-behavior: smooth;"
+        >
           @for (message of messageThread(); track message.id) {
             <li>
               <div>
